--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,16 @@
-﻿body {
+﻿.ui-header .ui-title,
+.ui-footer .ui-title,
+.ui-btn-inner *{
+    white-space:normal !important;
+}
+.photo{
+    display:block;
+    margin:0 auto;
+}
+dl.informations dt{
+    font-weight:bold;
+}
+#map{
+    width:100%;
+     height:600px;
 }
